--- a/dash.html
+++ b/dash.html
@@ -43,17 +43,17 @@ th{font-size:.85rem;opacity:.7}
   <aside class="sidebar open" id="sidebar">
     <div class="brand">LGU 3 ADMIN SYSTEM</div>
     <nav>
-      <a href="#" class="nav-item active" data-route="dashboard">Dashboard</a>
-      <a href="#" class="nav-item" data-route="contacts">Contacts</a>
-      <a href="#" class="nav-item" data-route="opportunities">Opportunities</a>
-      <a href="#" class="nav-item" data-route="marketing">Marketing</a>
-      <a href="#" class="nav-item" data-route="automations">Automations</a>
-      <a href="#" class="nav-item" data-route="websites">Websites</a>
-      <a href="#" class="nav-item" data-route="funnels">Funnels</a>
-      <a href="#" class="nav-item" data-route="reporting">Reporting</a>
-      <a href="#" class="nav-item" data-route="settings">Settings</a>
-    </nav>
-  </aside>
+    <a href="dash.html" class="nav-item active">Dashboard</a>
+    <a href="contacts.html" class="nav-item">Contacts</a>
+    <a href="opportunities.html" class="nav-item">Opportunities</a>
+    <a href="marketing.html" class="nav-item">Marketing</a>
+    <a href="automations.html" class="nav-item">Automations</a>
+    <a href="websites.html" class="nav-item">Websites</a>
+    <a href="funnels.html" class="nav-item">Funnels</a>
+    <a href="reporting.html" class="nav-item">Reporting</a>
+    <a href="settings.html" class="nav-item">Settings</a>
+  </nav>
+</aside>
 
   <section class="main">
     <header class="topbar">
