--- a/dash.html
+++ b/dash.html
@@ -42,18 +42,18 @@ th{font-size:.85rem;opacity:.7}
 <div class="app">
   <aside class="sidebar open" id="sidebar">
     <div class="brand">LGU 3 ADMIN SYSTEM</div>
-    <nav>
-      <a href="dash.html" class="nav-item active" data-page="dashboard">Dashboard</a>
-      <a href="contacts.html" class="nav-item" data-page="contacts">Contacts</a>
-      <a href="opportunities.html" class="nav-item" data-page="opportunities">Opportunities</a>
-      <a href="marketing.html" class="nav-item" data-page="marketing">Marketing</a>
-      <a href="automations.html" class="nav-item" data-page="automations">Automations</a>
-      <a href="websites.html" class="nav-item" data-page="websites">Websites</a>
-      <a href="funnels.html" class="nav-item" data-page="funnels">Funnels</a>
-      <a href="reporting.html" class="nav-item" data-page="reporting">Reporting</a>
-      <a href="settings.html" class="nav-item" data-page="settings">Settings</a>
-    </nav>
-  </aside>
+   <nav>
+    <a href="#" class="nav-item active" data-page="dashboard">Dashboard</a>
+    <a href="#" class="nav-item" data-page="contacts">Contacts</a>
+    <a href="#" class="nav-item" data-page="opportunities">Opportunities</a>
+    <a href="#" class="nav-item" data-page="marketing">Marketing</a>
+    <a href="#" class="nav-item" data-page="automations">Automations</a>
+    <a href="#" class="nav-item" data-page="websites">Websites</a>
+    <a href="#" class="nav-item" data-page="funnels">Funnels</a>
+    <a href="#" class="nav-item" data-page="reporting">Reporting</a>
+    <a href="#" class="nav-item" data-page="settings">Settings</a>
+  </nav>
+</aside>
 
   <section class="main">
     <header class="topbar">
