--- a/main.html
+++ b/main.html
@@ -8,8 +8,8 @@
   body {
     margin: 0;
     font-family: Arial, sans-serif;
-    background-color: #000;
-    color: #fff;
+    background-color: #fff; 
+    color: #000; 
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -27,13 +27,18 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    background-color: #fff; 
+    padding: 2rem;
+    border: 1px solid #000; 
+    border-radius: 8px;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.1);
   }
 
   .btn {
     padding: 1rem 2rem;
     font-size: 1rem;
-    color: #000;
-    background-color: #fff;
+    color: #fff; 
+    background-color: #000; 
     border: none;
     border-radius: 6px;
     cursor: pointer;
@@ -41,7 +46,7 @@
   }
 
   .btn:hover {
-    background-color: #ddd;
+    background-color: #333;
   }
 
   @media (max-width: 500px) {
