--- a/dash.html
+++ b/dash.html
@@ -44,13 +44,11 @@ th{font-size:.85rem;opacity:.7}
     <div class="brand">LGU 3 ADMIN SYSTEM</div>
    <nav>
     <a href="#" class="nav-item active" data-page="dashboard">Dashboard</a>
-    <a href="#" class="nav-item" data-page="contacts">Contacts</a>
-    <a href="#" class="nav-item" data-page="opportunities">Opportunities</a>
-    <a href="#" class="nav-item" data-page="marketing">Marketing</a>
-    <a href="#" class="nav-item" data-page="automations">Automations</a>
-    <a href="#" class="nav-item" data-page="websites">Websites</a>
-    <a href="#" class="nav-item" data-page="funnels">Funnels</a>
-    <a href="#" class="nav-item" data-page="reporting">Reporting</a>
+    <a href="#" class="nav-item" data-page="Vendor">Vendor Management</a>
+    <a href="#" class="nav-item" data-page="Commodity">Commodity and Price Monitoring</a>
+    <a href="#" class="nav-item" data-page="Supply">Supply Monitoring</a>
+    <a href="#" class="nav-item" data-page="Inspection">Inspection and compliance</a>
+    <a href="#" class="nav-item" data-page="Reports">Reports and Dashboard with AI analytic</a>
     <a href="#" class="nav-item" data-page="settings">Settings</a>
   </nav>
 </aside>
@@ -133,14 +131,18 @@ const pages = {
       </table>
     </div>
   `,
-  contacts: `<h1>Contacts</h1><p>Contacts content here...</p>`,
-  opportunities: `<h1>Opportunities</h1><p>Opportunities content here...</p>`,
-  marketing: `<h1>Marketing</h1><p>Marketing content here...</p>`,
-  automations: `<h1>Automations</h1><p>Automations content here...</p>`,
-  websites: `<h1>Websites</h1><p>Websites content here...</p>`,
-  funnels: `<h1>Funnels</h1><p>Funnels content here...</p>`,
-  reporting: `<h1>Reporting</h1><p>Reporting content here...</p>`,
-  settings: `<h1>Settings</h1><p>Settings content here...</p>`
+ Vendor: `
+ <h1>Vendor Management</h1><p>Contacts content here...</p>`,
+ Commodity: `
+ <h1>Commodity and Price Monitoring</h1><p>Opportunities content here...</p>`,
+ Supply: `
+ <h1>Supply Monitoring</h1><p>Marketing content here...</p>`,
+ Inspection: `
+ <h1>Inspection and compliance</h1><p>Automations content here...</p>`,
+ Reports: `
+ <h1>Reports and Dashboard with AI analytic</h1><p>Websites content here...</p>`,
+ Settings: `
+ <h1>Settings</h1><p>Websites content here...</p>`,
 };
 
 
