--- a/dash.html
+++ b/dash.html
@@ -50,6 +50,7 @@ th{font-size:.85rem;opacity:.7}
     <a href="#" class="nav-item" data-page="Inspection">Inspection and compliance</a>
     <a href="#" class="nav-item" data-page="Reports">Reports and Dashboard with AI analytic</a>
     <a href="#" class="nav-item" data-page="settings">Settings</a>
+    <a href="main.html" class="nav-item" style="margin-top: 2rem; font-weight: bold;">Logout</a>
   </nav>
 </aside>
 
